finalização da introdução, inicio e término da lista de bicicletas e inicio da tecnologia

--- a/css/global/global.css
+++ b/css/global/global.css
@@ -9,6 +9,7 @@
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 /* Global */
@@ -17,6 +18,17 @@ body {
   font-family: "Roboto", sans-serif;
   color: #111111;
   font-size: 100%;
+  padding-bottom: 600px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+img[src$=".jpg"] {
+  border-radius: 4px;
 }
 
 .container {
@@ -26,24 +38,4 @@ body {
   padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
-}
-
-.titulo {
-  font-size: 48px;
-  margin: 32px 0px;
-}
-
-.introducao.texto {
-  margin: 20px 0px;
-}
-
-.botao {
-  display: inline-block;
-  border-radius: 4px;
-  color: #320;
-  background-image: linear-gradient(#ffbf00, #f2a50c);
-  padding: 16px 32px;
-  font-size: 1.125rem;
-  font-weight: 600;
-  text-transform: uppercase;
 }
