--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,21 @@
-@import "./global.css";
+@import "./global/global.css";
 
 /* Utilidades  */
-@import "./cores.css";
-@import "./tipografia.css";
+@import "./utilidades/cores.css";
+@import "./utilidades/tipografia.css";
 @import "./utilidades/componentes.css";
 @import "./utilidades/formulario.css";
 
 /* Header e footer */
-@import "./header.css";
-@import ".footer.css";
+@import "./global/header.css";
+@import "./global/footer.css";
 
 /* introdução */
-@import "./introducao.css";
+@import "./home/introducao.css";
+
+/* Bicicletas */
+@import "./bicicletas/bicicletas-lista.css";
+@import "./bicicletas/bicicletas.css";
+
+/* Tecnologia */
+@import "./home/tecnologia.css";
