--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -13,6 +13,13 @@
   align-self: end;
 }
 
+.introducao img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
 .introducao h1 {
   margin-bottom: 32px;
 }
