--- a/css/home/tecnologia.css
+++ b/css/home/tecnologia.css
@@ -1,6 +1,5 @@
 .tecnologia-bg {
   background-color: var(--cor-11);
-  padding: 80px 0px;
   box-shadow: inset 0 80px var(--cor-0), inset 0 -80px var(--cor-0);
 }
 
@@ -15,6 +14,11 @@
   padding-bottom: 160px;
 }
 
+.tecnologia-conteudo > span {
+  margin-bottom: 20px;
+  display: block;
+}
+
 .tecnologia-conteudo h2 {
   margin-bottom: 32px;
 }
@@ -22,7 +26,12 @@
 .tecnologia-conteudo p {
   margin-bottom: 20px;
 }
-
+.tecnologia-imagem img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: left;
+}
 .link {
   text-transform: uppercase;
   font: 500 1.5rem/1.5 "Poppins", sans-serif;
@@ -37,8 +46,44 @@
   background-color: currentColor;
   display: block;
 }
+.link:hover {
+  color: var(--cor-0);
+}
 
 .tecnologia-vantagens {
   display: flex;
-  gap: 60px;
+  gap: 40px;
+}
+
+.tecnologia-vantagens h3 {
+  margin-bottom: 8px;
+  width: max-content;
+}
+
+.tecnologia-vantagens img {
+  width: 24px;
+  margin-bottom: 8px;
+}
+
+@media (max-width: 800px) {
+  .tecnologia {
+    grid-template-columns: 1fr;
+  }
+  .tecnologia-bg {
+    box-shadow: none;
+  }
+  .tecnologia-imagem {
+    display: none;
+  }
+  .tecnologia-conteudo {
+    padding: 60px 0px;
+  }
+  .link {
+    margin-bottom: 60px;
+  }
+}
+@media (max-width: 600px) {
+  .tecnologia-vantagens {
+    flex-direction: column;
+  }
 }
