--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -7,10 +7,21 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   color: #320;
   background-image: linear-gradient(#ffbf00, #f2a50c);
+  max-width: max-content;
 }
 .botao:hover {
   background-image: linear-gradient(#ffb60d, #e59317);
 }
+
+.botao.secundario {
+  background: var(--cor-10);
+  color: var(--cor-2);
+}
+
+.botao.secundario:hover {
+  background: var(--cor-9);
+}
+
 @media (max-width: 600px) {
   .botao {
     padding: 12px 16px;
