--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -22,8 +22,28 @@
   background: var(--cor-9);
 }
 
+.botao.seta {
+  display: flex;
+  align-items: center;
+}
+
+.botao.seta::after {
+  content: "";
+  display: inline-block;
+  width: 18px;
+  height: 10px;
+  margin-left: 12px;
+  background: url("../../img/icones/seta.svg");
+  transition: transform 0.2s;
+}
+.botao.seta:hover::after {
+  transform: translateX(4px);
+}
+
 @media (max-width: 600px) {
-  .botao {
+  .botao,
+  .botao.secundario,
+  .botao.seta {
     padding: 12px 16px;
     font-size: 1rem;
   }
