paginas separadas pra cada bicicleta, pagina de seguros e inicio da pagina de contato

--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -8,6 +8,7 @@
   color: #320;
   background-image: linear-gradient(#ffbf00, #f2a50c);
   max-width: max-content;
+  cursor: pointer;
 }
 .botao:hover {
   background-image: linear-gradient(#ffb60d, #e59317);
