--- a/css/bicicletas/bicicletas-lista.css
+++ b/css/bicicletas/bicicletas-lista.css
@@ -15,7 +15,9 @@
   margin-right: auto;
   overflow-x: auto;
 }
-
+#bicicleta .bicicletas-lista ul {
+  padding: 0 0px 20px 0px;
+}
 .bicicletas-lista h2 {
   padding-bottom: 2rem;
 }
