--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@
 @import "./bicicletas/bicicletas-lista.css";
 @import "./bicicletas/bicicletas.css";
 
+/* Bicicleta */
+@import "./bicicleta/bicicleta.css";
+@import "./bicicleta/seguro.css";
+
 /* Tecnologia */
 @import "./home/tecnologia.css";
 
@@ -26,6 +30,12 @@
 
 /* seguros */
 @import "./home/seguros.css";
+@import "./seguros/vantagens.css";
+@import "./seguros/perguntas.css";
 
 /* termos */
 @import "./termos/termos.css";
+
+/* contato */
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
