pagina de orçamentos e otimizações

--- a/css/contato/contato.css
+++ b/css/contato/contato.css
@@ -12,13 +12,15 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 .contato-dados {
-  background: var(--cor-12);
   border-radius: 5px 0 0 5px;
+  background: var(--cor-12) url("../../img/dec/bottom-left.svg") no-repeat
+    bottom 20px left 20px;
 }
 
 .contato-formulario {
-  background: var(--cor-0);
   border-radius: 0px 5px 5px 0px;
+  background: var(--cor-0) url("../../img/dec/bottom-right.svg") no-repeat
+    bottom 20px right 20px;
 }
 
 .contato-dados h2 {
@@ -28,7 +30,7 @@
 .contato-endereco {
   margin-bottom: 32px;
   padding-left: 28px;
-  background: url(../../img/icones/local.svg) no-repeat 0px 2px;
+  background: url("../../img/icones/local.svg") no-repeat 0px 2px;
 }
 
 .contato-meios a {
@@ -39,11 +41,11 @@
 }
 
 .contato-meios a:first-child {
-  background: url(../../img/icones/email.svg) no-repeat 0px 2px;
+  background: url("../../img/icones/email.svg") no-repeat 0px 2px;
 }
 
 .contato-meios a:nth-child(3) {
-  background: url(../../img/icones/telefone.svg) no-repeat 0px 2px;
+  background: url("../../img/icones/telefone.svg") no-repeat 0px 2px;
   margin-bottom: 60px;
   margin-top: 32px;
 }
@@ -65,7 +67,14 @@
   }
   .contato-dados,
   .contato-formulario {
-    border-radius: 0px;
     padding: 20px;
+  }
+
+  .contato-dados {
+    background: var(--cor-12);
+    border-radius: 5px 5px 0 0;
+  }
+  .contato-formulario {
+    border-radius: 0 0 5px 5px;
   }
 }
