--- a/css/home/depoimento.css
+++ b/css/home/depoimento.css
@@ -22,6 +22,8 @@
 .depoimento-conteudo {
   padding: 40px 40px 80px 80px;
   align-self: end;
+  background: url("../../img/dec/bottom-right-p.svg") no-repeat bottom 40px
+    right 40px;
 }
 
 .depoimento-conteudo p {
@@ -51,6 +53,12 @@
   bottom: -20px;
 }
 
+@media (min-width: 1200px) {
+  .depoimento img {
+    max-height: 520px;
+  }
+}
+
 @media (max-width: 800px) {
   .depoimento {
     grid-template-columns: 1fr;
@@ -59,6 +67,7 @@
   .depoimento-conteudo {
     padding: 40px 20px;
     justify-self: center;
+    background: none;
   }
   .depoimento img {
     max-height: 200px;
