--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -49,3 +49,12 @@
     font-size: 1rem;
   }
 }
+
+.titulo-bg {
+  background: var(--cor-11);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.titulo {
+  background: url("../../img/dec/top-right.svg") no-repeat top right 20px;
+}
