--- a/css/contato/lojas.css
+++ b/css/contato/lojas.css
@@ -1,66 +1,68 @@
 .lojas {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 40px;
-  padding-bottom: 80px;
-  padding-top: 80px;
+  gap: 0 40px;
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.lojas img {
+  border-radius: 4px 4px 0 0;
 }
 
 .lojas h1 {
-  margin-bottom: 10px;
+  grid-column: 1/-1;
+  margin-bottom: 60px;
 }
 
 .lojas-item {
-  background: var(--cor-0);
   border-radius: 4px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+  background: var(--cor-0);
 }
 
 .lojas-conteudo {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding: 28px 32px;
-}
-.lojas h1,
-.lojas-tempo,
-.lojas-conteudo h2 {
-  grid-column: span 2;
+  gap: 32px 16px;
+  padding: 32px;
 }
 
-.lojas-conteudo h2 {
-  margin-bottom: 20px;
+.lojas-conteudo h2,
+.lojas-tempo {
+  grid-column: 1/-1;
 }
+
 .lojas-dados {
+  display: grid;
   gap: 8px;
-  border-left: 2px solid var(--cor-3);
+  border-left: 2px solid var(--cor-2);
   padding-left: 12px;
+  justify-items: start;
 }
 
 .lojas-tempo {
-  padding-top: 32px;
   display: flex;
-  align-items: center;
   gap: 8px;
+  align-items: center;
 }
 
 @media (max-width: 800px) {
   .lojas {
-    grid-template-columns: 1fr;
+    gap: 20px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .lojas h1 {
+    margin-bottom: 32px;
   }
   .lojas-conteudo {
     grid-template-columns: 1fr;
   }
-  .lojas h1,
-  .lojas-tempo,
-  .lojas-conteudo h2 {
-    grid-column: 1;
-  }
-  .lojas-tempo {
-    width: max-content;
-  }
 }
+
 @media (max-width: 600px) {
-  .lojas-dados {
+  .lojas {
     grid-template-columns: 1fr;
   }
 }
