--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,6 @@
 /* contato */
 @import "./contato/contato.css";
 @import "./contato/lojas.css";
+
+/* orçamento */
+@import "./orcamento/orcamento.css";
