implementação do js

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 @import "./utilidades/tipografia.css";
 @import "./utilidades/componentes.css";
 @import "./utilidades/formulario.css";
+@import "./utilidades/animacao.css";
 
 /* Header e footer */
 @import "./global/header.css";
