--- a/css/global/header.css
+++ b/css/global/header.css
@@ -22,7 +22,7 @@
   position: relative;
 }
 
-.header-menu a:after {
+.header-menu a::after {
   content: "";
   display: block;
   height: 2px;
@@ -32,7 +32,9 @@
   transition: 0.3s;
   position: absolute;
 }
-.header-menu a:hover:after {
+
+.header-menu a:hover::after,
+.header-menu a.ativo::after {
   width: 100%;
 }
 
