--- a/css/home/seguros.css
+++ b/css/home/seguros.css
@@ -5,7 +5,7 @@
 .seguros {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding: 60px;
+  margin-top: 60px;
   padding-bottom: 60px;
   gap: 40px;
   align-items: center;
