--- a/css/home/seguros.css
+++ b/css/home/seguros.css
@@ -5,14 +5,17 @@
 .seguros {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin-top: 60px;
   padding-bottom: 60px;
   gap: 40px;
   align-items: center;
 }
 
 #seguros .seguros {
-  padding-top: 0px;
+  padding-top: 60px;
+}
+
+#principal .seguros {
+  padding-top: 32px;
 }
 
 .seguros h2 {
